[package]
name = "youtube_live_chat"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
regex = "1"
reqwest = { version = "0.12.8", features = ["cookies", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full", "io-util", "net", "sync", "time"] }
tokio-stream = "0.1"
async-stream = "0.3"
rcon = "0.6.0"
